Something happening with grid

--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -27,7 +27,11 @@
 
 @media (min-width: 768px) {
 	.grid-container {
-		grid-template-columns: 75px 1fr;
+		grid-template-columns: 60px 1fr;
+		grid-template-areas: 
+		"header header"
+		"navigation main"
+		"navigation main";
 	}
 	
 	.main {
@@ -35,23 +39,27 @@
 		grid-template-columns: 50%;
 	}
 	
+	.navigation {
+		grid-row: 2/ span 2;
+	}
+	
 	.header,
 	.alert,
 	.traffic,
 	.social-media {
-		grid-column: 1 / 2;
+		grid-column: 1 / span 2;
 	}
 	
 	.daily-traffic,
 	.members,
 	.message {
-		grid-column: 1 / 1;
+		grid-column: 1 / span 1;
 	}
 	
 	.mobile-users,
 	.recent-activity,
 	.settings {
-		grid-column: 2 / 1;
+		grid-column: 2 / span 1;
 	}
 	
 	.widget-full {
