--- a/css/styles.css
+++ b/css/styles.css
@@ -402,37 +402,42 @@ main {
 @media (min-width: 768px) {
   /* line 29, ../scss/components/_grid.scss */
   .grid-container {
-    grid-template-columns: 75px 1fr; }
+    grid-template-columns: 60px 1fr;
+    grid-template-areas: "header header" "navigation main" "navigation main"; }
 
-  /* line 33, ../scss/components/_grid.scss */
+  /* line 37, ../scss/components/_grid.scss */
   .main {
     display: grid;
     grid-template-columns: 50%; }
 
-  /* line 38, ../scss/components/_grid.scss */
+  /* line 42, ../scss/components/_grid.scss */
+  .navigation {
+    grid-row: 2/ span 2; }
+
+  /* line 46, ../scss/components/_grid.scss */
   .header,
   .alert,
   .traffic,
   .social-media {
-    grid-column: 1 / 2; }
+    grid-column: 1 / span 2; }
 
-  /* line 45, ../scss/components/_grid.scss */
+  /* line 53, ../scss/components/_grid.scss */
   .daily-traffic,
   .members,
   .message {
-    grid-column: 1 / 1; }
+    grid-column: 1 / span 1; }
 
-  /* line 51, ../scss/components/_grid.scss */
+  /* line 59, ../scss/components/_grid.scss */
   .mobile-users,
   .recent-activity,
   .settings {
-    grid-column: 2 / 1; }
+    grid-column: 2 / span 1; }
 
-  /* line 57, ../scss/components/_grid.scss */
+  /* line 65, ../scss/components/_grid.scss */
   .widget-full {
     width: 90vw; }
 
-  /* line 61, ../scss/components/_grid.scss */
+  /* line 69, ../scss/components/_grid.scss */
   .widget-half {
     width: 34vw; } }
 /* CSS Document */
@@ -498,6 +503,11 @@ main {
   justify-content: space-between;
   padding: 10px 20%;
   height: 60px; }
+  @media (min-width: 768px) {
+    /* line 3, ../scss/components/_nav.scss */
+    .navigation {
+      display: flex;
+      flex-direction: column; } }
 
 /* line 15, ../scss/components/_nav.scss */
 .icon-nav {
