--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -6,10 +6,10 @@
 	justify-content: space-between;
 	padding: 10px 20%;
 	height: 60px;
-	//@include media (break-l) {
-	//	display: flex;
-	//	flex-direction: column;
-	//}
+	@include media (break-l) {
+		display: flex;
+		flex-direction: column;
+	}
 }
 
 .icon-nav {
