--- a/css/styles.css
+++ b/css/styles.css
@@ -355,27 +355,33 @@ template {
 @import url('https://fonts.googleapis.com/css?family=Wire+One&display=swap');
 
 */
-/* line 14, ../scss/base/_base.scss */
+/* line 15, ../scss/base/_base.scss */
 * {
   box-sizing: border-box;
-  font-family: 'Wire One', sans-serif; }
+  font-family: 'Wire One', sans-serif;
+  max-width: 100vw; }
 
-/* line 19, ../scss/base/_base.scss */
+/* line 21, ../scss/base/_base.scss */
 body {
   margin: auto; }
 
-/* line 23, ../scss/base/_base.scss */
+/* line 25, ../scss/base/_base.scss */
 li {
   list-style-type: none; }
 
-/* line 27, ../scss/base/_base.scss */
+/* line 29, ../scss/base/_base.scss */
 a {
   text-decoration: none; }
 
-/* line 31, ../scss/base/_base.scss */
+/* line 33, ../scss/base/_base.scss */
 main {
   width: 95%;
   margin: auto; }
+
+/* line 38, ../scss/base/_base.scss */
+h2,
+h3 {
+  font-weight: 300; }
 
 /* CSS Document */
 /* CSS Document */
@@ -435,21 +441,35 @@ main {
 
   /* line 65, ../scss/components/_grid.scss */
   .widget-full {
-    width: 90vw; }
+    width: 78vw; }
 
   /* line 69, ../scss/components/_grid.scss */
   .widget-half {
-    width: 34vw; } }
+    width: 40vw; } }
 /* CSS Document */
-/* line 3, ../scss/components/_images.scss */
-.icon-some {
-  width: 55px;
-  height: 55px;
-  display: block;
-  margin-top: 20px;
-  margin-left: 20px;
-  overflow: visible;
-  border-radius: 50%; }
+@media (min-width: 768px) {
+  /* line 3, ../scss/components/_widgets.scss */
+  .traffic {
+    width: 88vw; } }
+
+/* line 9, ../scss/components/_widgets.scss */
+.traffic ul {
+  display: flex;
+  flex-direction: row; }
+
+/* line 14, ../scss/components/_widgets.scss */
+.traffic li {
+  margin-left: auto;
+  padding: 5px 10px;
+  border-radius: 20px;
+  cursor: pointer; }
+  /* line 19, ../scss/components/_widgets.scss */
+  .traffic li:hover {
+    background-color: #DFFFD6; }
+
+/* line 24, ../scss/components/_widgets.scss */
+.active {
+  background-color: #DFFFD6; }
 
 /* CSS Document */
 /* line 3, ../scss/components/_header.scss */
@@ -470,7 +490,7 @@ main {
 
 /* line 19, ../scss/components/_header.scss */
 .icon-header {
-  width: 35px;
+  width: 30px;
   transition: transform 0.2s linear; }
   /* line 22, ../scss/components/_header.scss */
   .icon-header:hover {
@@ -507,44 +527,73 @@ main {
     /* line 3, ../scss/components/_nav.scss */
     .navigation {
       display: flex;
-      flex-direction: column; } }
+      flex-direction: column;
+      height: 100%;
+      justify-content: flex-start; } }
 
-/* line 15, ../scss/components/_nav.scss */
+/* line 17, ../scss/components/_nav.scss */
 .icon-nav {
   width: 40px; }
-  /* line 17, ../scss/components/_nav.scss */
+  /* line 19, ../scss/components/_nav.scss */
   .icon-nav:hover {
     border-top: 2px solid #F3FFE1;
     padding-top: 4px; }
+  @media (min-width: 768px) {
+    /* line 17, ../scss/components/_nav.scss */
+    .icon-nav {
+      margin-bottom: 20px; }
+      /* line 25, ../scss/components/_nav.scss */
+      .icon-nav:hover {
+        border-top: none;
+        border-left: 2px solid #F3FFE1;
+        padding-left: 4px; } }
 
 /* CSS Document */
 /* line 5, ../scss/components/_dashboard.scss */
 .dashboard {
   display: flex;
   flex-direction: row;
-  justify-content: space-around; }
+  justify-content: space-between; }
 
 /* line 13, ../scss/components/_dashboard.scss */
 #dashboard-search {
-  border: none;
-  box-shadow: 1px 1px 5px 5px #F3FFE1;
-  width: 100px;
-  margin-top: 20px; }
+  border: 1px solid #DFFFD6;
+  border-radius: 20px;
+  box-shadow: 2px 2px 5px 5px #F3FFE1;
+  width: 150px;
+  padding: 5px;
+  margin-top: 15px; }
+  @media (min-width: 768px) {
+    /* line 13, ../scss/components/_dashboard.scss */
+    #dashboard-search {
+      width: 400px;
+      background-color: red; } }
 
 /* CSS Document */
-/* line 5, ../scss/components/_alert.scss */
-#alert {
+/* The alert message box */
+/* line 4, ../scss/components/_alert.scss */
+.alert {
+  padding: 20px;
   background-color: #FFD7D5;
   border-radius: 10px;
-  margin: auto 10px;
-  padding: 2px 10px;
-  display: flex; }
+  color: white;
+  margin-bottom: 15px;
+  width: 88vw; }
 
 /* line 13, ../scss/components/_alert.scss */
-.close-alert {
-  align-content: flex-end;
-  border: none;
-  background-color: transparent; }
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s; }
+
+/* line 24, ../scss/components/_alert.scss */
+.closebtn:hover {
+  color: black; }
 
 /* CSS Document */
 /* line 3, ../scss/components/_some.scss */
@@ -557,54 +606,92 @@ main {
 .some-container {
   display: flex;
   flex-direction: row;
-  border: 1px solid #FFD7D5;
   padding: 5px; }
 
-/* line 16, ../scss/components/_some.scss */
+/* line 15, ../scss/components/_some.scss */
 .some-text {
-  padding: 5px;
-  margin: auto; }
+  margin: auto;
+  display: inline-block;
+  width: 100px; }
+
+/* line 21, ../scss/components/_some.scss */
+.platform {
+  color: #7BDFF2;
+  font-weight: bold; }
+
+/* line 26, ../scss/components/_some.scss */
+.facebook {
+  border: 2px solid #FFD7D5;
+  border-left: none;
+  border-right: none; }
+
+/* line 32, ../scss/components/_some.scss */
+.followers {
+  font-size: 20px;
+  font-weight: 200; }
+
+/* line 37, ../scss/components/_some.scss */
+.some-image {
+  background-color: #FFD3E8;
+  width: 70px;
+  height: 70px;
+  overflow: visible;
+  border-radius: 50%;
+  margin: auto 0; }
+
+/* line 47, ../scss/components/_some.scss */
+.icon-some {
+  width: 50px;
+  height: 50px;
+  margin-top: 13px;
+  margin-left: 10px; }
 
 /* CSS Document */
 /* line 3, ../scss/components/_members.scss */
 .new-members {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start; }
+  flex-direction: column; }
 
-/* line 9, ../scss/components/_members.scss */
+/* line 8, ../scss/components/_members.scss */
 .members-container img {
-  width: 80px;
-  height: 80px;
-  margin: auto 10px auto auto; }
+  width: 50px;
+  height: 50px;
+  display: block; }
 
-/* line 15, ../scss/components/_members.scss */
+/* line 14, ../scss/components/_members.scss */
 .members-container {
   display: flex;
-  width: 100%;
   margin-top: 5px;
   margin-bottom: 5px;
-  height: 120px; }
-
-/* line 23, ../scss/components/_members.scss */
-.members-container {
+  height: 70px;
   border-bottom: 2px solid #FFD7D5; }
 
-/* line 27, ../scss/components/_members.scss */
-.members-text {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin: auto 10px auto auto; }
+/* line 22, ../scss/components/_members.scss */
+.members-container:last-child {
+  border-bottom: none; }
 
-/* line 34, ../scss/components/_members.scss */
+/* line 26, ../scss/components/_members.scss */
+.members-text {
+  width: 200px;
+  font-size: 12px;
+  align-self: flex-start;
+  margin-left: 20px; }
+
+/* line 33, ../scss/components/_members.scss */
+.members-date {
+  font-size: 12px;
+  font-style: italic; }
+
+/* line 38, ../scss/components/_members.scss */
 .members-date,
 .recent-arrow {
-  margin: auto 10px auto auto; }
+  margin-top: auto;
+  margin-bottom: auto; }
 
-/* line 39, ../scss/components/_members.scss */
+/* line 44, ../scss/components/_members.scss */
 .arrow {
-  font-size: 25px; }
+  font-size: 20px;
+  color: #7BDFF2; }
 
 /* CSS Document */
 /* line 3, ../scss/components/_message.scss */
@@ -615,12 +702,18 @@ main {
   border-radius: 5px; }
 
 /* line 10, ../scss/components/_message.scss */
-#userField {
-  margin-bottom: 10px; }
+.message input,
+.message textarea {
+  border: 1px solid #DFFFD6;
+  border-radius: 20px;
+  box-shadow: 2px 2px 5px 5px #F3FFE1;
+  margin-bottom: 10px;
+  padding: 10px; }
 
-/* line 14, ../scss/components/_message.scss */
+/* line 19, ../scss/components/_message.scss */
 #send {
   background-color: #dfffd6;
+  color: white;
   display: inline-block;
   text-align: center;
   text-transform: uppercase;
@@ -636,20 +729,21 @@ main {
 .toggle-switch {
   display: flex;
   justify-content: space-between;
-  margin: 20px 0; }
+  margin: 20px 0;
+  font-weight: 300; }
 
-/* line 9, ../scss/components/_settings.scss */
+/* line 10, ../scss/components/_settings.scss */
 .switch {
   position: relative;
   display: inline-block;
   width: 70px;
   height: 34px; }
 
-/* line 16, ../scss/components/_settings.scss */
+/* line 17, ../scss/components/_settings.scss */
 .switch input {
   display: none; }
 
-/* line 20, ../scss/components/_settings.scss */
+/* line 21, ../scss/components/_settings.scss */
 .slider {
   position: absolute;
   cursor: pointer;
@@ -660,7 +754,7 @@ main {
   background-color: #FFD7D5;
   transition: .5s; }
 
-/* line 31, ../scss/components/_settings.scss */
+/* line 32, ../scss/components/_settings.scss */
 .slider:before {
   position: absolute;
   content: "";
@@ -671,23 +765,23 @@ main {
   background-color: white;
   transition: .5s; }
 
-/* line 42, ../scss/components/_settings.scss */
+/* line 43, ../scss/components/_settings.scss */
 input:checked + .slider {
   background-color: #E8D7FF; }
 
-/* line 46, ../scss/components/_settings.scss */
+/* line 47, ../scss/components/_settings.scss */
 input:checked + .slider:before {
   transform: translateX(36px); }
 
-/* line 50, ../scss/components/_settings.scss */
+/* line 51, ../scss/components/_settings.scss */
 .slider.round {
   border-radius: 30px; }
 
-/* line 54, ../scss/components/_settings.scss */
+/* line 55, ../scss/components/_settings.scss */
 .slider.round:before {
   border-radius: 50%; }
 
-/* line 58, ../scss/components/_settings.scss */
+/* line 59, ../scss/components/_settings.scss */
 .slider:after {
   color: white;
   display: block;
@@ -697,13 +791,13 @@ input:checked + .slider:before {
   left: 61%;
   font-size: 13px; }
 
-/* line 68, ../scss/components/_settings.scss */
+/* line 69, ../scss/components/_settings.scss */
 input:checked + .slider:after {
   content: 'ON';
   font-weight: bolder;
   position: relative; }
 
-/* line 76, ../scss/components/_settings.scss */
+/* line 77, ../scss/components/_settings.scss */
 #timezone {
   width: 100%;
   display: block;
@@ -714,11 +808,12 @@ input:checked + .slider:after {
   margin: 20px 0px;
   border: none; }
 
-/* line 87, ../scss/components/_settings.scss */
+/* line 88, ../scss/components/_settings.scss */
 #save,
 #cancel {
   width: 49%;
   margin-bottom: 20px;
+  color: white;
   display: inline-block;
   text-align: center;
   text-transform: uppercase;
@@ -729,11 +824,11 @@ input:checked + .slider:after {
   border: 1px solid transparent;
   box-shadow: 3px 3px 10px 4px #ccc; }
 
-/* line 94, ../scss/components/_settings.scss */
+/* line 96, ../scss/components/_settings.scss */
 #save {
   background-color: #dfffd6; }
 
-/* line 98, ../scss/components/_settings.scss */
+/* line 100, ../scss/components/_settings.scss */
 #cancel {
   background-color: #f7d6e0; }
 
