--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -11,9 +11,11 @@
 @import url('https://fonts.googleapis.com/css?family=Wire+One&display=swap');
 
 */
+
 * {
 	box-sizing: border-box;
 	font-family: 'Wire One', sans-serif;
+	max-width: 100vw;
 }
 
 body {
@@ -31,4 +33,9 @@ a {
 main {
 	width: 95%;
 	margin: auto; 
+}
+
+h2,
+h3 {
+	font-weight: 300; 
 }
