--- a/scss/components/_alert.scss
+++ b/scss/components/_alert.scss
@@ -1,17 +1,26 @@
 /* CSS Document */
 
-// #alert .close-alert
-
-#alert {
+/* The alert message box */
+.alert {
+	padding: 20px;
 	background-color: $peach;
 	border-radius: 10px;
-	margin: auto 10px;
-	padding: 2px 10px;
-	display: flex;
+	color: white;
+	margin-bottom: 15px;
+	width: 88vw;
 }
 
-.close-alert {
-	align-content: flex-end;
-	border: none;
-	background-color: transparent;
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
 }
