--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,7 +1,7 @@
 /* CSS Document */
 
 @import 'grid';
-@import 'images';
+@import 'widgets';
 @import 'header';
 @import 'nav';
 @import 'dashboard';
