--- a/scss/components/_members.scss
+++ b/scss/components/_members.scss
@@ -3,39 +3,45 @@
 .new-members {
 	display: flex;
 	flex-direction: column;
-	align-items: flex-start;
 }
 
 .members-container img {
-	width: 80px;
-	height: 80px;
-	margin: auto 10px auto auto;
+	width: 50px;
+	height: 50px;
+	display: block;
 }
 
 .members-container {
 	display: flex;
-	width: 100%;
 	margin-top: 5px;
 	margin-bottom: 5px;
-	height: 120px;
+	height: 70px;
+	border-bottom: 2px solid $peach;
 }
 
-.members-container {
-	border-bottom: 2px solid $peach; 
+.members-container:last-child {
+	border-bottom: none;
 }
 
 .members-text {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	margin: auto 10px auto auto;
+	width: 200px;
+	font-size: 12px;
+	align-self: flex-start;
+	margin-left: 20px;
+}
+
+.members-date {
+	font-size: 12px;
+	font-style: italic;
 }
 
 .members-date,
 .recent-arrow {
-	margin: auto 10px auto auto;
+	margin-top: auto;
+	margin-bottom: auto;
 }
 
 .arrow {
-	font-size: 25px;
+	font-size: 20px;
+	color: $darkerblue;
 }
