--- a/scss/components/_some.scss
+++ b/scss/components/_some.scss
@@ -9,12 +9,44 @@
 .some-container {
 	display: flex; 
 	flex-direction: row;
-	border: 1px solid $peach;
 	padding: 5px;
 }
 
 .some-text {
-	padding: 5px; 
 	margin: auto;
+	display: inline-block;
+	width: 100px;
 }
 
+.platform {
+	color: $darkerblue;
+	font-weight: bold;
+}
+
+.facebook {
+	border: 2px solid $peach;
+	border-left: none;
+	border-right: none;
+}
+
+.followers {
+	font-size: 20px;
+	font-weight: 200;
+}
+
+.some-image {
+	background-color: $pink;
+	width: 70px;
+	height: 70px;
+	overflow: visible;
+	border-radius: 50%;
+	margin: auto 0;
+	
+}
+
+.icon-some {
+	width: 50px;
+  	height: 50px;
+	margin-top: 13px;
+	margin-left: 10px;
+}
