--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -10,4 +10,4 @@ $blue: #DFFFD6;
 $darkerblue: #7BDFF2;
 
 $break-l: "(min-width: 768px)";
-$break-s: "(max-width: 767px)";
+$break-xl: "(min-width: 1024px)";
