--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -20,7 +20,8 @@
 	width: 30px;
 	transition: transform 0.2s linear;
 	&:hover {
-  		transform: rotate(30deg)
+  		transform: rotate(30deg);
+		cursor: pointer;
 	}
 }
 
@@ -41,4 +42,13 @@
 	color: white;
 	font-weight: 100;
 	padding-left: 5px;
+}
+
+.badge {
+	position: relative;
+	width: 10px;
+	height: 10px;
+	margin-top: 8px;
+	border-radius: 50%;
+	background: $mint;
 }
